# _metaAPI

./: .replit  README.md  app.json  caffeine.toml  fix-i18n-dupes.mjs  index.html  nixpacks.toml  package.json  pnpm-lock.yaml  railway.json  server.js  tailwind.config.js  vite.config.js
.github/PartnersIOD/: README.md
.github/workflows/: deploy.yml  publish-python-sdk.yml
cli/: go.mod  main.go
public/: config.json
sdk/go/: README.md  babiesiq.go  go.mod
sdk/javascript/: README.md  package.json
sdk/javascript/src/: client.ts  errors.ts  index.ts  types.ts
sdk/php/: README.md  composer.json
sdk/php/src/: BabiesIQ.php
sdk/python/: README.md  pyproject.toml
sdk/python/babiesiq/: __init__.py  client.py  models.py
sdk/python/biq_api/: __init__.py  client.py  errors.py  models.py
src/: App.tsx  api.ts  backend.d.ts  backend.ts  index.css  main.tsx
src/components/: AdminLayout.tsx  AnnouncementBar.tsx  AuthShell.tsx  CookieConsent.tsx  DashboardLayout.tsx  DiagnosticPanel.tsx  Footer.tsx  GoogleIcon.tsx  Header.tsx  InvoiceExportModal.tsx  Layout.tsx  PageTransition.tsx  PasswordStrength.tsx  PaymentResultModal.tsx  ProtectedRoute.tsx  ThemeSwitcher.tsx  TryItWidget.tsx  UnauthorizedScreen.tsx  UpdateChannel.tsx
src/components/ui/: SkeletonExtras.tsx
src/declarations/: backend.did.d.ts  backend.did.js
src/hooks/: useAdminAuth.ts  useAuth.ts  useBackend.ts  useThemeMode.ts
src/lib/: admin-announcements-api.ts  admin-api.ts  api.ts  channel-api.ts  config.ts  domain-verify.ts  i18n.ts  payment-api.ts
src/pages/: BannedPage.tsx  Contact.tsx  CreatePassword.tsx  Dashboard.tsx  DashboardKeys.tsx  DashboardSettings.tsx  DashboardUsage.tsx  Docs.tsx  ForgotPassword.tsx  Home.tsx  Login.tsx  PasswordSuccess.tsx  Pricing.tsx  Privacy.tsx  Refund.tsx  ResetPassword.tsx  Sdk.tsx  Signup.tsx  TelegramConnect.tsx  Terms.tsx  VerifyOtp.tsx
src/pages/admin/: AdminAnnouncements.tsx  AdminDashboard.tsx  AdminLogin.tsx  AdminManageAdmins.tsx  AdminProtectedRoute.tsx  AdminSupport.tsx  AdminSupportDetail.tsx  AdminTrustedDomains.tsx  AdminUserDetail.tsx  AdminUsers.tsx
src/pages/auth/: CreatePassword.tsx  OAuthCallback.tsx  PasswordSuccess.tsx  VerifyOtp.tsx
src/pages/panel/: ApiKeys.tsx  Billing.tsx  (+5 more)
src/store/: adminAuth.ts  auth.ts
src/types/: admin.ts  announcements.ts  index.ts
(+8 files in other folders)
