[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "babiesiq-sdk"
version = "2.0.0"
description = "Official Python SDK for BabiesIQ API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "BabiesIQ Team", email = "support@babiesiq.tech" }]
keywords = ["babiesiq", "youtube", "audio", "video", "streaming", "api"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://babiesiq.tech"
Documentation = "https://babiesiq.tech/docs"
Repository = "https://github.com/BabiesIQ/web"
